--- a/package.json
+++ b/package.json
@@ -16,18 +16,25 @@
     "package:store": "node scripts/package-for-store.js",
     "store:prepare": "npm run package:store",
     "generate:icons": "node scripts/generate-icons.js",
-    "icons:web": "open store-assets/icon-generator.html"
+    "icons:web": "open store-assets/icon-generator.html",
+    "update-api-url": "node scripts/update-api-url.js"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.38.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "googleapis": "^128.0.0",
+    "nodemailer": "^6.10.1"
   },
   "devDependencies": {
     "vercel": "^32.0.0"
   },
-  "keywords": ["chrome-extension", "jokes", "new-tab"],
+  "keywords": [
+    "chrome-extension",
+    "jokes",
+    "new-tab"
+  ],
   "author": "Your Name",
   "license": "MIT"
 }
