--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "googleapis": "^128.0.0",
-    "nodemailer": "^6.10.1"
+    "googleapis": "^128.0.0"
   },
   "devDependencies": {
     "vercel": "^32.0.0"
