--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "@supabase/supabase-js": "^2.38.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "googleapis": "^128.0.0"
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "vercel": "^32.0.0"
