Fix Chrome extension issues and optimize performance
- Remove unused 'storage' permission from manifest.json to fix Chrome Web Store rejection
- Remove invalid 'privacy_policy' key from manifest.json
- Optimize joke loading performance with immediate local joke display
- Fix automatic joke switching when API loads in background
- Reduce API health check timeout from 5s to 2s for faster failover
- Add new API endpoints: deactivate-joke.js and joke-formatter.js
- Update both main and chrome-store-package versions

--- a/manifest.json
+++ b/manifest.json
@@ -6,10 +6,7 @@
   "short_name": "Joor Pokes",
   "author": "Poor Jokes Team",
   "homepage_url": "https://poor-jokes-newtab-7huqmp0n7-mayanks-projects-72f678fa.vercel.app",
-  "privacy_policy": "https://poor-jokes-newtab-7huqmp0n7-mayanks-projects-72f678fa.vercel.app/privacy-policy.html",
-  "permissions": [
-    "storage"
-  ],
+  "permissions": [],
   "chrome_url_overrides": {
     "newtab": "newtab.html"
   },
