--- a/chrome-store-package/manifest.json
+++ b/chrome-store-package/manifest.json
@@ -3,9 +3,7 @@
   "name": "Joor Pokes",
   "version": "1.0.0",
   "description": "Transform your new tab into a laughter-filled experience with poor jokes, ratings, and community submissions!",
-  "permissions": [
-    "storage"
-  ],
+  "permissions": [],
   "chrome_url_overrides": {
     "newtab": "newtab.html"
   },
