--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,15 @@
 {
   "outputDirectory": ".",
+  "buildCommand": "npm run test:integration",
   "rewrites": [
     {
       "source": "/api/(.*)",
       "destination": "/api/$1"
     }
-  ]
+  ],
+  "functions": {
+    "api/*.js": {
+      "maxDuration": 30
+    }
+  }
 }
