Update project configuration and add new features
- Updated Chrome Store guide and package configuration
- Enhanced newtab functionality with performance monitoring
- Added smart caching and URL validation scripts
- Updated privacy policy and manifest files
- Added deployment summary and troubleshooting docs
- Improved API configuration and validation

--- a/manifest-store.json
+++ b/manifest-store.json
@@ -25,7 +25,7 @@
     }
   ],
   "author": "Poor Jokes Team",
-  "homepage_url": "https://poor-jokes-newtab-h84vfdbd2-mayanks-projects-72f678fa.vercel.app",
+  "homepage_url": "https://poor-jokes-newtab.vercel.app",
   "short_name": "Joor Pokes",
   "minimum_chrome_version": "88"
 }
