--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "test:config": "node test-config-validation.js",
     "test:extension-urls": "node test-extension-urls.js",
     "test:all": "npm run test:integration",
-    "pre-commit": "npm run test:integration",
+    "validate:urls": "node scripts/validate-urls.js",
+    "pre-commit": "npm run validate:urls && npm run test:integration",
     "health": "node -e \"fetch('https://poor-jokes-newtab.vercel.app/api/jokes').then(r => r.json()).then(d => console.log('Health:', d.success ? 'OK' : 'FAIL')).catch(e => console.log('Health: FAIL -', e.message))\"",
     "package:store": "npm run test:integration && node scripts/package-for-store.js",
     "store:prepare": "npm run package:store",
