--- a/manifest.json
+++ b/manifest.json
@@ -5,13 +5,10 @@
   "description": "Transform your new tab into a laughter-filled experience with poor jokes, ratings, and community submissions!",
   "short_name": "Joor Pokes",
   "author": "Poor Jokes Team",
-  "homepage_url": "https://poor-jokes-newtab-7huqmp0n7-mayanks-projects-72f678fa.vercel.app",
+  "homepage_url": "https://poor-jokes-newtab.vercel.app",
   "permissions": [],
   "host_permissions": [
-    "https://poor-jokes-newtab-6ewxclhxr-mayanks-projects-72f678fa.vercel.app/*",
-    "https://poor-jokes-newtab-ch7te6lzr-mayanks-projects-72f678fa.vercel.app/*",
-    "https://poor-jokes-newtab-6yax4u0s4-mayanks-projects-72f678fa.vercel.app/*",
-    "https://poor-jokes-newtab-kcr9acwtg-mayanks-projects-72f678fa.vercel.app/*"
+    "https://poor-jokes-newtab.vercel.app/*"
   ],
   "chrome_url_overrides": {
     "newtab": "newtab.html"
