--- a/chrome-store-package/manifest.json
+++ b/chrome-store-package/manifest.json
@@ -3,13 +3,7 @@
   "name": "Joor Pokes",
   "version": "1.0.1",
   "description": "Transform your new tab into a laughter-filled experience with poor jokes, ratings, and community submissions!",
-  "permissions": [
-    "activeTab",
-    "storage"
-  ],
-  "host_permissions": [
-    "https://poor-jokes-newtab.vercel.app/*"
-  ],
+  "permissions": [],
   "chrome_url_overrides": {
     "newtab": "newtab.html"
   },
