--- a/manifest-store.json
+++ b/manifest-store.json
@@ -1,11 +1,9 @@
 {
   "manifest_version": 3,
   "name": "Joor Pokes",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Transform your new tab into a laughter-filled experience with poor jokes, ratings, and community submissions!",
-  "permissions": [
-    "storage"
-  ],
+  "permissions": [],
   "chrome_url_overrides": {
     "newtab": "newtab.html"
   },
