Add joke repeat prevention integration test and GitHub Actions workflow
- Add integration test that simulates continuous 'another' button clicks
- Test verifies less than 10 jokes repeat during full journey
- Add GitHub Actions workflow to run tests before publishing
- Integrate test into package:store script
- Test blocks publishing if more than 10 jokes repeat

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "poor-jokes-newtab",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "A new tab extension that shows poor jokes with rating and submission system",
   "main": "index.js",
   "scripts": {
@@ -12,17 +12,18 @@
     "test": "npm run local",
     "test:api": "node tests/api-test.js",
     "test:integration": "npm run test:urls && npm run test:extension && npm run test:config && npm run test:extension-urls",
+    "test:repeat": "node tests/joke-repeat-test.js",
     "test:urls": "node test-url-behavior.js",
     "test:extension": "node test-extension.js",
     "test:config": "node test-config-validation.js",
     "test:extension-urls": "node test-extension-urls.js",
-    "test:all": "npm run test:integration",
+    "test:all": "npm run test:integration && npm run test:repeat",
     "test:daily-jokes": "node test-daily-jokes.js",
     "test:telegram-jokes": "node test-telegram-jokes.js",
     "validate:urls": "node scripts/validate-urls.js",
     "pre-commit": "npm run validate:urls && npm run test:integration",
     "health": "node -e \"fetch('https://poor-jokes-newtab.vercel.app/api/jokes').then(r => r.json()).then(d => console.log('Health:', d.success ? 'OK' : 'FAIL')).catch(e => console.log('Health: FAIL -', e.message))\"",
-    "package:store": "npm run test:integration && node scripts/package-for-store.js",
+    "package:store": "npm run test:integration && npm run test:repeat && node scripts/package-for-store.js",
     "store:prepare": "npm run package:store",
     "generate:icons": "node scripts/generate-icons.js",
     "icons:web": "open store-assets/icon-generator.html",
